kubernetes/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: travelduty
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: travelduty/api-gateway:2.0.9
        ports:
        - containerPort: 4741
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
