kubernetes/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: travelduty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: travelduty/auth-service:3.4.0
        ports:
        - containerPort: 5223
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
