kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: travelduty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: travelduty/backend:4.3.7
        ports:
        - containerPort: 5834
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
