kubernetes/booking-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: travelduty
spec:
  replicas: 5
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: travelduty/booking-service:3.4.9
        ports:
        - containerPort: 3353
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
