kubernetes/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  labels:
    app: travelduty
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: travelduty
      component: database
  template:
    metadata:
      labels:
        app: travelduty
        component: database
    spec:
      containers:
      - name: database
        image: postgres:15
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 32Gi
