kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: travelduty
spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: travelduty/frontend:3.3.5
        ports:
        - containerPort: 8050
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
