kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: travelduty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: travelduty/nginx:4.9.5
        ports:
        - containerPort: 6478
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
