kubernetes/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: travelduty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: travelduty/payment-service:3.9.1
        ports:
        - containerPort: 4027
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
