kubernetes/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: travelduty
spec:
  replicas: 4
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: travelduty/postgres:4.3.6
        ports:
        - containerPort: 7095
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
