kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: travelduty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: travelduty/redis:2.1.5
        ports:
        - containerPort: 3457
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
