kubernetes/backend-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: travelduty
spec:
  type: ClusterIP
  ports:
  - port: 8324
    targetPort: 8887
    protocol: TCP
    name: http
  selector:
    app: travelduty
    component: backend
