kubernetes/frontend-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: travelduty
spec:
  type: NodePort
  ports:
  - port: 8350
    targetPort: 8253
    protocol: TCP
    name: http
  selector:
    app: travelduty
    component: frontend
